Fallback to user's locale for setting IMDB rating

The IMDB fetcher assumed the decimal point would always be '.' which is
obviously incorrect in many locales. While the IMDB website apparently
always uses the period, fall back to using the default locale to convert
to a float.

BUG: 401894
FIXED-IN: 3.1.5